--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,26 @@
+# JDBC URL for MySQL database
 spring.datasource.url=jdbc:mysql://localhost:3306/inventorymanagement?createDatabaseIfNotExist=true
+
+# Database username and password
 spring.datasource.username=root
 spring.datasource.password=
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+# Hibernate behavior settings
+# "update" mode: Hibernate will update the schema based on entity classes
+spring.jpa.hibernate.ddl-auto=update
 
+# Logging settings for Hibernate
+# Log SQL queries at DEBUG level
 logging.level.org.hibernate.SQL=DEBUG
+
+# Log SQL parameter binding types at TRACE level
 logging.level.org.hibernate.type=TRACE
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# Show SQL statements in the console for debugging
 spring.jpa.show-sql=true
+
+# Format SQL statements for readability in logs
 spring.jpa.properties.hibernate.format_sql=true
+
+# Hibernate dialect for MySQL 8
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
